syntax = "proto3";

package pb;

option go_package = "github.com/khiemta03/bookstore-be/authentication-service/internal/grpc/authentication/pb";

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    string user_id = 1; 
}

